# kicadcliwrapper

./: .pre-commit-config.yaml  LICENSE  PARSER.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/kicadcliwrapper/: lib.py  main.py
test/: test_version.py
